--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                     body: JSON.stringify({
                         umur: parseInt(umur),
                         tinggi_badan: parseFloat(tinggi_badan),
+                        berat_badan: parseFloat(berat_badan),
+                        lila: parseFloat(lila),
                         jenis_kelamin: jenis_kelamin
                     }),
                 });
